--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -35,8 +35,8 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   min-height: 95vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(125, 213, 111, 0.8)), to(rgba(40, 180, 131, 0.8))), url("/img/hero.jpg");
-  background-image: linear-gradient(to right bottom, rgba(125, 213, 111, 0.8), rgba(40, 180, 131, 0.8)), url("/img/hero.jpg");
+  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(125, 213, 111, 0.8)), to(rgba(40, 180, 131, 0.8))), url("./img/hero.jpg");
+  background-image: linear-gradient(to right bottom, rgba(125, 213, 111, 0.8), rgba(40, 180, 131, 0.8)), url("./img/hero.jpg");
   background-size: cover;
   background-position: top;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
