--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -1,8 +1,10 @@
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
 }
 
 html {
@@ -21,6 +23,8 @@ body {
   line-height: 1.7;
   color: #777;
   padding: 3rem;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .header {
@@ -91,21 +95,23 @@ body {
 }
 
 .text-box .heading-primary .heading-primary-main {
-  letter-spacing: 3.5rem;
-  font-size: 6rem;
+  letter-spacing: 2.6rem;
+  font-size: 6.25rem;
   -webkit-animation-name: moveInLeft;
           animation-name: moveInLeft;
   -webkit-animation-duration: 1s;
           animation-duration: 1s;
   -webkit-animation-timing-function: ease-out;
           animation-timing-function: ease-out;
+  font-weight: 400;
 }
 
 .text-box .heading-primary .heading-primary-sub {
   letter-spacing: 1.25rem;
-  font-size: 3rem;
+  font-size: 2.6rem;
   -webkit-animation: moveInRight 1s ease-out;
           animation: moveInRight 1s ease-out;
+  font-weight: 400;
 }
 
 .text-box a {
@@ -116,7 +122,7 @@ body {
 .text-box .btn:visited {
   text-transform: uppercase;
   font-size: 2rem;
-  border-radius: 50px;
+  border-radius: 5rem;
   text-transform: uppercase;
   text-decoration: none;
   -webkit-transition: all .2s;
@@ -124,15 +130,15 @@ body {
 }
 
 .text-box .btn:hover {
-  -webkit-transform: translateY(-3px);
-          transform: translateY(-3px);
+  -webkit-transform: translateY(-0.3rem);
+          transform: translateY(-0.3rem);
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
 .text-box .btn:active {
-  -webkit-transform: translateY(-1px);
-          transform: translateY(-1px);
+  -webkit-transform: translateY(-0.1rem);
+          transform: translateY(-0.1rem);
   -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
           box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
